# SemesterProject

./: .gitignore  CMakeLists.txt  Doxyfile  annotated.html  bindings_8cc.html  calculate__displacements_8py.html  classGraphMesh-members.html  classGraphMesh.html  classLineMapping-members.html  classLineMapping.html  classLinearMatrixComputation_1_1LinearFEElementMatrix-members.html  classLinearMatrixComputation_1_1LinearFEElementMatrix.html  classLinearMatrixComputation_1_1LinearFELoadVector-members.html  classLinearMatrixComputation_1_1LinearFELoadVector.html  classParametricMatrixComputation_1_1ParametricFEElementMatrix-members.html  classParametricMatrixComputation_1_1ParametricFEElementMatrix.html  classParametricMatrixComputation_1_1ParametricFELoadVector-members.html  classParametricMatrixComputation_1_1ParametricFELoadVector.html  classes.html  classneural__network_1_1DataType-members.html  classneural__network_1_1DataType.html  classneural__network_1_1NeuralNetwork-members.html  classneural__network_1_1NeuralNetwork.html  classneural__network_1_1NeuralNetworkTrainer-members.html  classneural__network_1_1NeuralNetworkTrainer.html  classneural__network_1_1ParamPointDataset-members.html  classneural__network_1_1ParamPointDataset.html  classneural__network_1_1TagIndex-members.html  classneural__network_1_1TagIndex.html  data__operations_8cc.html  data__operations_8h.html  data__operations_8h_source.html  data_operations.cc  data_operations.h  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_d44c64559bbebec7f509842c48db8b23.html  experiment__parameters_8py.html  files.html  functions.html  (+118 more)
.github/workflows/: doxygen.yml
cmake/Hunter/: config.cmake
doc/html/: bindings_8cc.html  class_graph_mesh-members.html  class_graph_mesh.html  class_line_mapping-members.html  class_line_mapping.html  class_linear_matrix_computation_1_1_linear_f_e_element_matrix.html  class_linear_matrix_computation_1_1_linear_f_e_load_vector.html  class_parametric_matrix_computation_1_1_parametric_f_e_element_matrix.html  class_parametric_matrix_computation_1_1_parametric_f_e_load_vector-members.html  classneural__network_1_1_data_type.html  classneural__network_1_1_neural_network-members.html  classneural__network_1_1_neural_network.html  classneural__network_1_1_neural_network_trainer-members.html  classneural__network_1_1_neural_network_trainer.html  classneural__network_1_1_param_point_dataset-members.html  classneural__network_1_1_param_point_dataset.html  classneural__network_1_1_tag_index.html  common__imports_8py.html  data__operations_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  experiment__parameters_8py.html  files.html  functions.html  functions_a.html  functions_d.html  functions_enum.html  functions_func.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_o.html  functions_p.html  functions_r.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_w.html  (+37 more)
docs/: annotated.html  calculate__displacements_8py.html  class_linear_matrix_computation_1_1_linear_f_e_element_matrix-members.html  class_linear_matrix_computation_1_1_linear_f_e_load_vector-members.html  class_parametric_matrix_computation_1_1_parametric_f_e_element_matrix-members.html  class_parametric_matrix_computation_1_1_parametric_f_e_load_vector.html  classes.html  classneural__network_1_1_data_type-members.html  classneural__network_1_1_tag_index-members.html  data__operations_8cc.html  data__operations_8h.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions_b.html  functions_c.html  functions_e.html  functions_eval.html  functions_f.html  functions_n.html  functions_s.html  functions_y.html  globals.html  globals_func.html  globals_vars.html  graph__mesh_8cc.html  graph__mesh_8h.html  hierarchy.html  index.html  line__mapping_8cc.html  line__mapping_8h_source.html  linear__elasticity__assembler_8h.html  linear__matrix__computation_8cc.html  linear__matrix__computation_8h_source.html  mainpage_8md.html  mesh_8h_source.html  mesh__parametrization_8h.html  mesh__parametrization_8h_source.html  namespace_data_operations.html  namespace_linear_matrix_computation.html  namespacecommon__imports.html  (+32 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  (+32 more)
geometries/: displacementEnergy.geo_unrolled  test_generateMesh_multi.geo_unrolled  test_generateMesh_single.geo_unrolled
include/: data_operations.h  graph_mesh.h  line_mapping.h  linear_elasticity_assembler.h  linear_matrix_computation.h  mesh.h  mesh_parametrization.h  parametric_matrix_computation.h
meshes/: displacementEnergy.msh  t1.msh  t2.msh  test0.geo  test0.msh  test1.geo  test1.msh  test10.msh  test11.msh  test12.msh  test13.msh  test14.msh  test15.msh  test2.geo  test2.msh  test20.msh  test21.msh  test22.msh  test23.msh  test24.msh  test3.msh  test4.msh  test5.msh  test6.msh  testNE1.geo  testNE1.msh  testNE2.geo  testNE2.msh  testNE3.geo  test_generateMesh_multi.msh  test_generateMesh_single.msh
python/: calculate_displacements.py  experiment_parameters.py  neural_network.py  train_network.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+65 more)
src/: bindings.cc  data_operations.cc  graph_mesh.cc  line_mapping.cc  linear_matrix_computation.cc  mesh.cc  mesh_parametrization.cc  parametric_matrix_computation.cc  testFEM.cc
test/: test_data_operations.cc  test_mesh_parametrization.cc
(+66 files in other folders)
